Final clean-up, mostly linting; fixed possible eternal loop in PreferenceContainer.delete(String); switched FileUtil.deleteFile() to nio files; changed fail behaviour of time stamp methods;